# lab4-hash-pki

./: .gitignore  CMakeLists.txt
include/: file_utils.h  hash_utils.h  hmac_utils.h  length_extension_utils.h  md5_collision_utils.h  x509_utils.h
results/: hash_benchmark_full.csv  hash_benchmark_full_ubuntu.csv  hash_benchmark_quick.csv  hash_benchmark_quick_ubuntu.csv  ubuntu_environment.txt
samples/: hmac_msg.txt  msg.txt
scripts/: benchmark_hash.sh
src/: file_utils.cpp  hash_utils.cpp  hmac_utils.cpp  length_extension_utils.cpp  main.cpp  md5_collision_utils.cpp  x509_utils.cpp
